# Alfred

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alfred/: app.py  constants.py  exceptions.py  types.py
alfred/actions/: approvals.py  base.py  policies.py  registry.py  rollback.py
alfred/autonomy/: approval_engine.py  authority.py  domain_caps.py  escalation.py  ladder.py  sensitivity_classifier.py
alfred/cli/: commands.py  control_keys.py  interactive_shell.py  main.py  renderers.py
alfred/consultation/: classifier.py  consultation_types.py  extractor.py  manager.py  models.py  thread_router.py  updater.py  validators.py
alfred/core/: checkpoints.py  event_bus.py  health.py  loop_controller.py  mode_manager.py  registry.py  runtime.py  scheduler.py  state_manager.py  versioning.py
alfred/doctrine/: bandwidth.py  conviction.py  curiosity_bounds.py  epistemic_posture.py  mission_weights.py  reality_anchor.py  risk.py  silence.py  (+1 more)
configs/: app.yaml  autonomy_policies.yaml  consultation_policies.yaml  memory_policies.yaml  modes.yaml  notification_policies.yaml  prompt_policies.yaml  risk_classes.yaml  self_improvement_policies.yaml  source_registry.yaml  watcher_policies.yaml
examples/: continue_project_from_chats.py  run_world_signal_watch.py  selective_self_rewrite_demo.py  self_furthering_loop.py  start_media_from_mood.py
scripts/: bootstrap.py  init_db.py  replay_benchmark.py  run_cli.py  run_dev.py  run_notification_bridge.py  run_scheduler.py  run_worker.py  seed_defaults.py
(+162 files in other folders)
